<resources>
    <string name="app_name">GitQuiz</string>
    <string name="q1">1) Which of the following is the correct way to initialize a new Git repository?</string>
    <string name="git_add">git add</string>
    <string name="git_init">git init</string>
    <string name="git_commit">git commit</string>
    <string name="git_push">git push</string>
    <string name="q2">2) Who is the mascot of GitHub?</string>
    <string name="mname">name</string>
    <string name="q3">3) Which of the following are Git Repository hosting services</string>
    <string name="pikacode">PikaCode</string>
    <string name="gitenterprise">Git Enterprise</string>
    <string name="sourceforge">Sourceforge.net</string>
    <string name="nota">None of the above</string>
    <string name="q4">4) What is the command used to write a commit message</string>
    <string name="git_commit_a">git commit –a</string>
    <string name="git_clone">git clone</string>
    <string name="q5">5) What is the function of ‘git reset’?</string>
    <string name="reset1">To reset your index as well as the working directory to the state of your last commit.</string>
    <string name="resetstart">To reset the repository to the starting</string>
    <string name="pull">You pull the latest changes from a remote repository</string>
    <string name="hello">Hello</string>
    <string name="submit">Submit</string>
    <string name="_hi">"Hi "</string>
    <string name="answer_please">Please answer the following questions:</string>
    <string name="please_enter_your_name">Please enter your name!</string>
    <string name="name">name</string>
    <string name="start_the_quiz">Start The Quiz</string>
    <string name="enter_your_name_please">Enter your name please!</string>
    <string name="your_name">your name</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="excellent">Excellent!\nYou are a GitHub expert.\n\nCorrect answers: </string>
    <string name="well_done">Well done!\nSo close to the ultimate goal.\n\nCorrect answers: </string>
    <string name="not_bad">Not bad.\nBut you can do more.\n\nCorrect answers: </string>
    <string name="from">/5</string>
    <string name="tray_again">/5 Try again!!! :)</string>
    <string name="answer_to_all_please">Answer to all questions please!</string>
    <string name="enter_name_please">Enter your name please!</string>
</resources>
