<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ojasvi.gitquiz.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/gitcat"
            android:id="@+id/imageView" />

        <ImageView
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_80dp"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/dimen_24dp"
            app:srcCompat="@drawable/udacity" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_24dp"
        android:layout_marginRight="@dimen/dimen_24dp"
        android:text="@string/enter_your_name_please"
        android:textSize="@dimen/dimen_18sp" />

    <EditText
        android:id="@+id/editText_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_24dp"
        android:layout_marginRight="@dimen/dimen_24dp"
        android:maxLength="30"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dimen_24dp"

        android:layout_marginRight="@dimen/dimen_24dp"
        android:layout_weight="3"
        android:gravity="left"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitEnd"
            android:src="@drawable/gitz" />

        <Button
            android:id="@+id/button_startQuiz"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="@dimen/dimen_24dp"
            android:backgroundTint="@color/colorGreen"
            android:text="@string/start_quiz"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light" />

    </RelativeLayout>
</LinearLayout>
